# signaldeck-sdk

./: .gitignore  README.md  pyproject.toml
signaldeck_sdk/: __init__.py  cmd.py  cmdResult.py  context.py  value_provider.py
signaldeck_sdk/persistence/: data_store.py  field.py  persist_data.py
signaldeck_sdk/processor/: display_data.py  display_processor.py  processor.py
